	(handle_run): moved game launching logic back into this method instead
	of using sdl threads.
	(launch_game): removed function.
	* lemonui.h (destroy_screen): new public method for destroying screen.
	* lemonui.cpp (~lemonui): moved screen and double buffer destruction
	to a new method.
	(destroy_screen): new method for destroying screen and double buffer.

2008-02-03 Mike Frysinger <vapier@users.sourceforge.net>

	* configure.in: setup BUILD_CC env var which looks for gcc and then
	cc.
	* Makefile.am: declare ACLOCAL_AMFLAGS so automatic autotool
	generation knows how to properly execute aclocal.
	* src/Makefile.am: build bin2c with BUILD_CC rather than CC.
	fix bug where if bin2c fails default_font.h would still be created and
	contain garbage.

2008-01-18 Josh Kropf <josh@slashdev.ca>

	* lemonmenu.cpp (launch_game):
	Platform specific handing (windows, linux) of window when launching
	mame.


 Jan 03/2008
=======================
+ create separate thread to launch mame which eliminates the event queue
  flushing and special minimize/maximize handling on Linux
+ made favorite view the default view
+ added patch to restore lemon launcher on win32 when mame exits

 Dec 27/2007
=======================
+ added 3 'view' states: favorites, most played, and genre view
+ lalt + left/right to switch views
+ removed toggle and reload keys... menu can be reloaded by switching views
+ added sqlite3 as a dependency
+ using sqlite database for games list
+ update counter in games db each time rom is played

 Dec 23/2007
=======================
+ some code cleanup in preparation to use sqlite for the games list

 Dec 20/2007
=======================
+ added a 'rotate' option for controlling the orientation of the interface
+ any 'skin' verbiage has been changed to 'theme'
+ fixed possible memory leak in config file resolving function

 Nov 27/2007
=======================
+ use stat in layout class to test if a file exists
+ added support for relative paths in theme files
